Adds HttpRequest unit tests